--- a/penz/detalhes.html
+++ b/penz/detalhes.html
@@ -127,7 +127,7 @@
                 <div class="carousel-item" data-slide-number="7">
                   <img src="src/imgs/detalhes_10.jpeg" class="img-fluid">
                 </div>
-                <a class="carousel-control-prev mr-5" href="#myCarousel" role="button" data-slide="prev">
+                <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="sr-only">Previous</span>
                 </a>
@@ -146,22 +146,22 @@
                       <div class="carousel-item active">
                         <div class="col-12">
                           <ul class="carousel-indicators list-inline mx-auto ">
-                            <li class="list-inline-item active">
+                            <li class="list-inline-item active mr-0">
                               <a id="carousel-selector-0" class="selected" data-slide-to="0" data-target="#myCarousel">
                                 <img src="src/imgs/capa_detalhes.jpeg" class="img-fluid">
                               </a>
                             </li>
-                            <li class="list-inline-item">
+                            <li class="list-inline-item mr-0">
                               <a id="carousel-selector-1" data-slide-to="1" data-target="#myCarousel">
                                 <img src="src/imgs/detalhes_1.jpeg" class="img-fluid">
                               </a>
                             </li>
-                            <li class="list-inline-item">
+                            <li class="list-inline-item mr-0">
                               <a id="carousel-selector-2" data-slide-to="2" data-target="#myCarousel">
                                 <img src="src/imgs/detalhes_2.jpeg" class="img-fluid">
                               </a>
                             </li>
-                            <li class="list-inline-item">
+                            <li class="list-inline-item mr-0">
                               <a id="carousel-selector-3" data-slide-to="3" data-target="#myCarousel">
                                 <img src="src/imgs/detalhes_3.jpeg" class="img-fluid">
                               </a>
@@ -172,22 +172,22 @@
                       <div class="carousel-item">
                         <div class="col-12">
                           <ul class="carousel-indicators list-inline mx-auto">
-                            <li class="list-inline-item">
+                            <li class="list-inline-item mr-0">
                               <a id="carousel-selector-4" data-slide-to="4" data-target="#myCarousel">
                                 <img src="src/imgs/detalhes_4.jpeg" class="img-fluid">
                               </a>
                             </li>
-                            <li class="list-inline-item">
+                            <li class="list-inline-item mr-0">
                               <a id="carousel-selector-5" data-slide-to="5" data-target="#myCarousel">
                                 <img src="src/imgs/detalhes_5.jpeg" class="img-fluid">
                               </a>
                             </li>
-                            <li class="list-inline-item">
+                            <li class="list-inline-item mr-0">
                               <a id="carousel-selector-6" data-slide-to="6" data-target="#myCarousel">
                                 <img src="src/imgs/detalhes_6.jpeg" class="img-fluid">
                               </a>
                             </li>
-                            <li class="list-inline-item">
+                            <li class="list-inline-item mr-0">
                               <a id="carousel-selector-7" data-slide-to="7" data-target="#myCarousel">
                                 <img src="src/imgs/detalhes_7.jpeg" class="img-fluid">
                               </a>
@@ -198,22 +198,22 @@
                       <div class="carousel-item">
                         <div class="col-12">
                           <ul class="carousel-indicators list-inline mx-auto">
-                            <li class="list-inline-item">
+                            <li class="list-inline-item mr-0">
                               <a id="carousel-selector-8" data-slide-to="8" data-target="#myCarousel">
                                 <img src="src/imgs/detalhes_8.jpeg" class="img-fluid">
                               </a>
                             </li>
-                            <li class="list-inline-item">
+                            <li class="list-inline-item mr-0">
                               <a id="carousel-selector-9" data-slide-to="9" data-target="#myCarousel">
                                 <img src="src/imgs/detalhes_9.jpeg" class="img-fluid">
                               </a>
                             </li>
-                            <li class="list-inline-item">
+                            <li class="list-inline-item mr-0">
                               <a id="carousel-selector-10" data-slide-to="10" data-target="#myCarousel">
                                 <img src="src/imgs/detalhes_10.jpeg" class="img-fluid">
                               </a>
                             </li>
-                            <li class="list-inline-item">
+                            <li class="list-inline-item mr-0">
                               <a id="carousel-selector-11" data-slide-to="11" data-target="#myCarousel">
                                 <img src="src/imgs/detalhes_11.jpeg" class="img-fluid">
                               </a>
@@ -222,7 +222,7 @@
                         </div>
                       </div>
                     </div>
-                    <a class="carousel-control-prev w-auto pr-5 mr-5" href="#vendasCarousel" role="button" data-slide="prev">
+                    <a class="carousel-control-prev w-auto mr-5" href="#vendasCarousel" role="button" data-slide="prev">
                       <span class="carousel-control-prev-icon bg-dark border border-dark rounded-circle" aria-hidden="true"></span>
                       <span class="sr-only">Previous</span>
                     </a>
